feat: Integrate version information to git build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
-name: Build and Test
+name: Build and Release
 
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main ]
 
@@ -24,26 +26,47 @@ jobs:
             os: windows-latest,
             cc: "cl",
             cxx: "cl",
-            environment_script: "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+            artifact_name: "windows-x64"
           }
           - {
             name: "Ubuntu Latest GCC",
             os: ubuntu-latest,
             cc: "gcc",
-            cxx: "g++"
+            cxx: "g++",
+            artifact_name: "linux-x64"
           }
           - {
             name: "macOS Latest Clang",
             os: macos-latest,
             cc: "clang",
-            cxx: "clang++"
+            cxx: "clang++",
+            artifact_name: "macos-x64"
           }
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          fetch-depth: 0
+
+      - name: Get version information
+        id: version
+        shell: bash
+        run: |
+          # Get the build number (commit count)
+          echo "BUILD_NUMBER=$(git rev-list --count HEAD)" >> $GITHUB_ENV
+          
+          # Get short SHA
+          echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          
+          # Set version based on tag or development build
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+            echo "IS_RELEASE=true" >> $GITHUB_ENV
+          else
+            echo "VERSION=dev-build.${{ env.BUILD_NUMBER }}" >> $GITHUB_ENV
+            echo "IS_RELEASE=false" >> $GITHUB_ENV
+          fi
 
       - name: Install Qt (Windows)
         if: runner.os == 'Windows'
@@ -73,69 +96,46 @@ jobs:
         with:
           cmake-version: ${{env.CMAKE_VERSION}}
 
-      - name: Configure CMake (Windows)
-        if: runner.os == 'Windows'
+      - name: Configure CMake
         run: |
-          echo "Configuring CMake for Windows..."
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DQt6_DIR=${{github.workspace}}/qt/lib/cmake/Qt6
-          echo "CMake configuration completed."
-
-      - name: Configure CMake (Unix)
-        if: runner.os != 'Windows'
-        run: |
-          echo "Configuring CMake for Unix..."
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-          echo "CMake configuration completed."
+          cmake -B ${{github.workspace}}/build \
+                -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} \
+                -DPROJECT_VERSION="${{ env.VERSION }}"
 
       - name: Build
-        run: |
-          echo "Starting build process..."
-          cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-          echo "Build completed."
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
       - name: Package Windows
         if: runner.os == 'Windows'
         shell: cmd
         run: |
-          echo "Starting Windows packaging..."
           mkdir package
-          
-          echo "Searching for executable..."
-          if exist "build\${{env.BUILD_TYPE}}\${{env.PROJECT_NAME}}.exe" (
-            echo "Found executable in build\${{env.BUILD_TYPE}}"
-            copy "build\${{env.BUILD_TYPE}}\${{env.PROJECT_NAME}}.exe" package\
-          ) else if exist "build\${{env.PROJECT_NAME}}.exe" (
-            echo "Found executable in build"
-            copy "build\${{env.PROJECT_NAME}}.exe" package\
-          ) else (
-            echo "Error: Could not find executable. Directory contents:"
-            dir /s build\*.exe
-            exit 1
-          )
-          
-          echo "Running windeployqt..."
-          windeployqt --no-translations package\${{env.PROJECT_NAME}}.exe
-          
-          echo "Windows packaging completed."
+          copy "build\${{env.BUILD_TYPE}}\${{env.PROJECT_NAME}}.exe" "package\${{env.PROJECT_NAME}}.exe"
+          windeployqt --no-translations "package\${{env.PROJECT_NAME}}.exe"
+          cd package
+          7z a -tzip "..\${{env.PROJECT_NAME}}-${{ matrix.config.artifact_name }}-${{ env.VERSION }}.zip" *
 
       - name: Package Unix
         if: runner.os != 'Windows'
         run: |
-          echo "Starting Unix packaging..."
           mkdir -p package
-          if [ -f "build/${{env.PROJECT_NAME}}" ]; then
-            echo "Found executable in build/"
-            cp "build/${{env.PROJECT_NAME}}" package/
+          cp "build/${{env.PROJECT_NAME}}" package/
+          cd package
+          if [ "${{ runner.os }}" == "Linux" ]; then
+            tar czf "../${{env.PROJECT_NAME}}-${{ matrix.config.artifact_name }}-${{ env.VERSION }}.tar.gz" *
           else
-            echo "Error: Could not find executable. Directory contents:"
-            find build -type f -executable
-            exit 1
+            zip -r "../${{env.PROJECT_NAME}}-${{ matrix.config.artifact_name }}-${{ env.VERSION }}.zip" *
           fi
-          echo "Unix packaging completed."
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - name: Create Release
+        if: github.event_name != 'pull_request'
+        uses: softprops/action-gh-release@v1
         with:
-          name: ${{env.PROJECT_NAME}}-${{ runner.os }}
-          path: ${{github.workspace}}/package/
-          compression-level: 9
+          tag_name: ${{ env.IS_RELEASE == 'true' && env.VERSION || 'dev-build' }}
+          name: ${{ env.IS_RELEASE == 'true' && format('Release {0}', env.VERSION) || format('Development Build {0} ({1})', env.BUILD_NUMBER, env.SHA_SHORT) }}
+          files: |
+            ${{env.PROJECT_NAME}}-${{ matrix.config.artifact_name }}-${{ env.VERSION }}.*
+          prerelease: ${{ env.IS_RELEASE != 'true' }}
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
